--- a/front-end/src/pages/debate/debate.css
+++ b/front-end/src/pages/debate/debate.css
@@ -1,12 +1,12 @@
 .custom-btn {
   background-image: linear-gradient(
     to right,
+    #393f4d,
     #feda6a,
-    black,
-    #feda6a
+    #393f4d
   ) !important;
   border: none;
-  color: #feda6a !important;
+  color: black !important;
   padding: 15px 32px;
   text-align: center;
   margin: 4px 2px;
@@ -16,8 +16,13 @@
 }
 
 .custom-btn:hover {
-  background-image: linear-gradient(to right, black, #feda6a, black) !important;
-  color: black !important;
+  background-image: linear-gradient(
+    to right,
+    #feda6a,
+    #393f4d,
+    #feda6a
+  ) !important;
+  color: #feda6a !important;
 }
 
 .page-link {
