--- a/front-end/src/pages/debate/debate.css
+++ b/front-end/src/pages/debate/debate.css
@@ -29,6 +29,46 @@ input[type="checkbox"]:checked {
   color: #feda6a !important;
 }
 
+.tomato-btn {
+  background-color: tomato !important;
+  color: black !important;
+  padding: 15px 32px;
+  text-align: center;
+  margin: 10px;
+  cursor: pointer;
+  border: none !important;
+  font-weight: 500 !important;
+}
+
+.tomato-btn:hover {
+  background-color: #393f4d !important;
+  color: #feda6a !important;
+  text-align: center;
+  cursor: pointer;
+  border: none !important;
+  font-weight: 500 !important;
+}
+
+.orange-btn {
+  background-color: orange !important;
+  color: black !important;
+  padding: 15px 32px;
+  text-align: center;
+  margin: 10px;
+  cursor: pointer;
+  border: none !important;
+  font-weight: 500 !important;
+}
+
+.orange-btn:hover {
+  background-color: #393f4d !important;
+  color: #feda6a !important;
+  text-align: center;
+  cursor: pointer;
+  border: none !important;
+  font-weight: 500 !important;
+}
+
 .link {
   font-weight: bold;
   color: rgb(184, 134, 11);
@@ -40,7 +80,8 @@ input[type="checkbox"]:checked {
   text-decoration: underline;
 }
 
-.link:focus, .link:active {
+.link:focus,
+.link:active {
   color: rgb(153, 110, 2);
 }
 
@@ -77,7 +118,7 @@ input[type="checkbox"]:checked {
 .threads p {
   display: -webkit-box;
   -webkit-line-clamp: 5;
-  -webkit-box-orient: vertical;  
+  -webkit-box-orient: vertical;
   overflow: hidden;
 }
 
@@ -96,10 +137,9 @@ input[type="checkbox"]:checked {
   --bs-pagination-active-bg: #feda6a !important;
 }
 
-
 @keyframes SlideUp {
   0% {
-      transform: translateY(0);
+    transform: translateY(0);
   }
   100% {
     transform: translateY(-72px);
@@ -111,6 +151,6 @@ input[type="checkbox"]:checked {
     transform: translateY(-72px);
   }
   100% {
-      transform: translateY(0);
+    transform: translateY(0);
   }
 }
