--- a/front-end/src/pages/debate/debate.css
+++ b/front-end/src/pages/debate/debate.css
@@ -81,6 +81,15 @@ input[type="checkbox"]:checked {
   overflow: hidden;
 }
 
+.toggle {
+  position: absolute;
+  right: 40px;
+  background: grey;
+  list-style: none;
+  text-align: center;
+  padding: 0;
+}
+
 .form-error {
   color: red;
 }
