--- a/front-end/src/pages/debate/debate.css
+++ b/front-end/src/pages/debate/debate.css
@@ -30,7 +30,7 @@ input[type="checkbox"]:checked {
 }
 
 .tomato-btn {
-  background-color: tomato !important;
+  background-color: #ff4040 !important;
   color: black !important;
   padding: 15px 32px;
   text-align: center;
@@ -50,7 +50,7 @@ input[type="checkbox"]:checked {
 }
 
 .orange-btn {
-  background-color: orange !important;
+  background-color: #3f3fff !important;
   color: black !important;
   padding: 15px 32px;
   text-align: center;
@@ -136,7 +136,8 @@ input[type="checkbox"]:checked {
   color: rgb(155, 145, 145);
 }
 
-.toggle-button:focus, .toggle-button:active {
+.toggle-button:focus,
+.toggle-button:active {
   color: rgb(21, 21, 21);
 }
 
